# openbmc-tutorials

./: README.md  lessonaddtoflash.md  lessonbusmethod.md  lessonrobot.md  lessonsdk101.md  lessonsim101.md  lessonwatch.md
hellomethod/: Makefile.am  bootstrap.sh  configure.ac  main.cpp  method_tutorial.cpp  method_tutorial.hpp
hellomethod/xyz/openbmc_project/tutorial/hellomethod/: Manager.interface.yaml
openbmc-test-automation/tests/: test_hellomethod.robot
watcher/: Makefile.am  configure.ac  main.cpp
